# arora-sdk

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Cargo.toml  PreLoad.cmake  configure.py  package.json  readme.md  rust-toolchain.toml
crates/arora-behavior/: CHANGELOG.md  Cargo.toml  readme.md
crates/arora-behavior-tree/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs  readme.md
crates/arora-behavior-tree-types/: CHANGELOG.md  Cargo.toml  readme.md
crates/arora-behavior-tree-types-yaml/: CHANGELOG.md  Cargo.toml  build.rs  readme.md
crates/arora-behavior-tree-types-yaml/records/enumeration/: 325a5767-e344-4532-860e-0749bcf2e428@1.0.0.yaml
crates/arora-behavior-tree-types-yaml/records/structure/: 6f49e650-84ca-4899-a9bd-1f3bf17fab51@1.0.0.yaml
crates/arora-behavior-tree-types-yaml/src/: lib.rs
crates/arora-behavior-tree-types/src/: lib.rs  status.rs  tick_id.rs
crates/arora-behavior-tree/docs/: nodes.md
crates/arora-behavior-tree/groot/: cosine_tree.xml  cosine_tree_groot_edited.xml  groot_arora_palette.xml  simple_compact.xml
crates/arora-behavior-tree/src/: behavior.rs  behavior_tree.rs  error.rs  graph.rs  nodes.rs  schema.rs  schema_groot.rs  status.rs  tests.rs  tick_id.rs  tree_node.rs  variable.rs
crates/arora-behavior-tree/src/arora_generated/: mod.rs
crates/arora-behavior/docs/: interpreter-workflow.md
crates/arora-behavior/src/: built_in.rs  golden.rs  graph.rs  interpreter_module.rs  lib.rs
crates/arora-bridge/: CHANGELOG.md  Cargo.toml  readme.md
crates/arora-bridge-ros2/: CHANGELOG.md  Cargo.toml  README.md
crates/arora-bridge-ros2/examples/: zenoh_probe.rs
crates/arora-bridge-ros2/src/: bridge.rs  cdr.rs  conversions.rs  lib.rs  msg_types.rs
crates/arora-bridge-ros2/tests/: tests.rs
crates/arora-bridge-ws/: CHANGELOG.md  Cargo.toml  README.md
crates/arora-bridge-ws/src/: bridge.rs  control_panel.html  key.rs  lib.rs  messages.rs  server.rs
crates/arora-bridge/src/: lib.rs
crates/arora-buffers/: CHANGELOG.md  Cargo.toml  build.rs  readme.md
crates/arora-buffers/src/: alloc.rs  lib.rs  raw_id.rs  read.rs  serde_raw_id.rs  serde_uuid.rs  typed.rs  uuid.rs  value_io.rs  write.rs
crates/arora-cli/: Cargo.toml  readme.md
crates/arora-cli/src/: call.rs  main.rs
crates/arora-engine/: CHANGELOG.md  Cargo.toml  build.rs  readme.md
crates/arora-engine/src/: call.rs  engine.rs  lib.rs  load.rs  module.rs
crates/arora-engine/tests/: browser.rs
crates/arora-engine/wit/: arora-module.wit
crates/arora-hal/: CHANGELOG.md  Cargo.toml  readme.md
crates/arora-hal-restful/: CHANGELOG.md  Cargo.toml
crates/arora-hal-restful/configs/: hackerbot.json
crates/arora-hal-restful/src/: config.rs  lib.rs  restful_error.rs  restful_hal.rs  tls.rs  utils.rs
crates/arora-hal-restful/src/conversions/: hackerbot.rs  mod.rs
crates/arora-hal-ros2/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs
crates/arora-hal-ros2/configs/: nao.json  pepper.json  quori.json  ur3.json  ur5.json
crates/arora-hal-ros2/src/: config.rs  lib.rs  ros2_error.rs  ros2_hal.rs  ros2_msgs.rs
crates/arora-hal-ros2/src/configs/: mod.rs  nao.rs  pepper.rs  quori.rs  unitree_g1.rs  ur3.rs  ur5.rs
crates/arora-hal-ros2/src/conversions/: converting_publisher.rs  from_state_change.rs  mod.rs  to_state_change.rs
crates/arora-hal/src/: lib.rs
crates/arora-index/: Cargo.toml  readme.md
crates/arora-index/src/: lib.rs
crates/arora-module-cli/: Cargo.toml  readme.md
crates/arora-module-cli/src/: generate.rs  main.rs  resolve.rs
crates/arora-module-core/: Cargo.toml  readme.md
crates/arora-module-core/src/: header.rs  lib.rs  resolve.rs
crates/arora-module-cpp/: Cargo.toml  readme.md
crates/arora-module-cpp/src/: constant.rs  declare.rs  func.rs  id.rs  main.rs  ty.rs
crates/arora-module-cpp/src/ast/: mod.rs
crates/arora-module-rust/: Cargo.toml  readme.md
crates/arora-module-rust/src/: header.rs  lib.rs  main.rs  rustfmt.rs
crates/arora-registry/: CHANGELOG.md  Cargo.toml  readme.md
crates/arora-registry-remote/: CHANGELOG.md  Cargo.toml
crates/arora-registry-remote/src/: config.rs  lib.rs  remote.rs  remote_cached.rs
crates/arora-registry/src/: config.rs  lib.rs  local.rs  local_yaml.rs  remote.rs  remote_cached.rs
crates/arora-registry/src/local/: editable.rs  mod.rs  readable.rs  reg_ref.rs
crates/arora-status/: Cargo.toml
crates/arora-status/src/: lib.rs
crates/arora-types/: CHANGELOG.md  Cargo.toml  WASM_IMPLEMENTATION.md  package.json  readme.md
crates/arora-types-derive/: Cargo.toml
crates/arora-types-derive/src/: lib.rs
crates/arora-types/.github/: copilot-instructions.md
crates/arora-types/.github/workflows/: ci.yml
crates/arora-types/examples/: test_new_conversions.rs
crates/arora-types/src/: arora_type.rs  call.rs  keyvalue.rs  lib.rs  value.rs  value_serde.rs
crates/arora-types/src/data/: mod.rs  state.rs  store.rs
crates/arora-types/src/module/: high.rs
crates/arora-types/src/record/: enumeration.rs  folder.rs  freeze.rs  mod.rs  module.rs  reference.rs  selector.rs  structure.rs  ty.rs  versioned.rs  wire_tests.rs
crates/arora-types/src/ty/: low.rs  mod.rs
crates/arora-types/src/value_serde/: bridge.rs  mod.rs  seeded.rs  walk.rs
crates/arora-types/tests/integration/: value-instanceof.test.js  value.test.js
crates/arora-util/: CHANGELOG.md  Cargo.toml  build.rs  readme.md
crates/arora-util/src/: lib.rs
crates/arora-vfs/: CHANGELOG.md  Cargo.toml  readme.md
crates/arora-vfs/src/: lib.rs
crates/arora-web/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs  readme.md
crates/arora-web/src/: lib.rs
crates/arora-web/tests/: browser.rs
crates/arora-web/www/: demo.html  demo.js  index.html  index.js  serve.sh
libs/: CMakeLists.txt
libs/c/: CMakeLists.txt
libs/cpp/: CMakeLists.txt
libs/cpp/include/arora/: arora.hpp  optional.hpp
libs/qi-stub/: CMakeLists.txt
libs/qi-stub/include/qi/: registration.hpp  session.hpp
tests/: Cargo.toml  build.rs
tests/integration/: value.test.js  wasm-api.test.js
tests/src/: lib.rs
tests/tests/: component.rs  integration.rs
(+305 files in other folders)
