[workspace]
resolver = "2"

members = [
  "crates/arora",
  "modules/nao",
  "modules/polly",
  "crates/arora-web",
  "modules/test-behavior-tree-nodes",
  "crates/arora-behavior-tree-types-yaml",
  "crates/arora-behavior-tree-types",
  "crates/arora-behavior-tree",
  "crates/arora-types",
  "crates/arora-simple-data-store",
  "crates/arora-hal",
  "crates/arora-bridge",
  "crates/arora-engine",
  "crates/arora-buffers",
  "crates/arora-module-authoring/core",
  "crates/arora-module-authoring/cli",
  "crates/arora-module-authoring/cpp",
  "crates/arora-module-authoring/rust",
  "crates/arora-registry",
  "crates/arora-cli",
  "crates/arora-util",
  "crates/arora-vfs",
  "crates/wasi-sdk",
  "modules/test-rust-wasm",
  "modules/test-rust-component",
  "modules/test-cpp",
  "modules/test-cpp-2",
  "tests",
]

default-members = [
  "crates/arora",
  "crates/arora-behavior-tree-types-yaml",
  "crates/arora-behavior-tree-types",
  "crates/arora-behavior-tree",
  "crates/arora-types",
  "crates/arora-simple-data-store",
  "crates/arora-hal",
  "crates/arora-bridge",
  "crates/arora-engine",
  "crates/arora-buffers",
  "crates/arora-module-authoring/core",
  "crates/arora-module-authoring/cli",
  "crates/arora-module-authoring/cpp",
  "crates/arora-module-authoring/rust",
  "crates/arora-registry",
  "crates/arora-cli",
  "crates/arora-util",
  "crates/arora-vfs",
  "crates/wasi-sdk",
  "tests",
]


[profile.release]
lto = "thin"
debug = 1

