[workspace]
resolver = "2"

members = [
  "crates/arora",
  "modules/nao",
  "modules/polly",
  "crates/arora-web",
  "modules/test-behavior-tree-nodes",
  "crates/arora-behavior-tree-types-yaml",
  "crates/arora-behavior-tree-types",
  "crates/arora-behavior-tree",
  "crates/arora-types",
  "crates/arora-behavior",
  "crates/arora-simple-data-store",
  "crates/arora-hal",
  "crates/arora-bridge",
  "crates/arora-engine",
  "crates/arora-buffers",
  "crates/arora-module-authoring/core",
  "crates/arora-module-authoring/cli",
  "crates/arora-module-authoring/cpp",
  "crates/arora-module-authoring/rust",
  "crates/arora-registry",
  "crates/arora-cli",
  "crates/arora-util",
  "crates/arora-vfs",
  "crates/wasi-sdk",
  "modules/test-rust-wasm",
  "modules/test-rust-component",
  "modules/test-cpp",
  "modules/test-cpp-2",
  "tests",
]

default-members = [
  "crates/arora",
  "crates/arora-behavior-tree-types-yaml",
  "crates/arora-behavior-tree-types",
  "crates/arora-behavior-tree",
  "crates/arora-types",
  "crates/arora-behavior",
  "crates/arora-simple-data-store",
  "crates/arora-hal",
  "crates/arora-bridge",
  "crates/arora-engine",
  "crates/arora-buffers",
  "crates/arora-module-authoring/core",
  "crates/arora-module-authoring/cli",
  "crates/arora-module-authoring/cpp",
  "crates/arora-module-authoring/rust",
  "crates/arora-registry",
  "crates/arora-cli",
  "crates/arora-util",
  "crates/arora-vfs",
  "crates/wasi-sdk",
  "tests",
]


[profile.release]
lto = "thin"
debug = 1

# `arora` git-depends the studio-bridge crates for the Zenoh bridge. Those crates
# pull `arora-types` from crates.io and `arora-bridge` from the arora-engine git
# repo; redirect both to this workspace's own crates so the graph shares a single
# copy instead of duplicating them (which would fail to type-check).
[patch.crates-io]
arora-types = { path = "crates/arora-types" }

[patch."https://github.com/semio-ai/arora-engine.git"]
arora-bridge = { path = "crates/arora-bridge" }

