add_subdirectory(c)

include(ExternalProject)


ExternalProject_Add(arora-cpp
  SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cpp
  BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/cpp
  CMAKE_CACHE_ARGS
    -DWASI_SDK_PATH:FILEPATH=${WASI_SDK_PATH}
    -DARORA_MODULE_CLI:FILEPATH=${ARORA_MODULE_CLI}
    -DARORA_BASE_INCLUDE_DIR:FILEPATH=${TARGET_DIR}/include
    -DNATIVE_LIB_DIR:FILEPATH=${NATIVE_LIB_DIR}
    -DWASM_LIB_DIR:FILEPATH=${WASM_LIB_DIR}
  INSTALL_COMMAND ""
  DEPENDS arora-buffers wasi-sdk
)