[package]
name = "arora-integration-tests"
version = "0.0.0"
edition = "2021"
license = "Proprietary"
publish = false
description = "End-to-end tests that exercise built modules"

[lib]
path = "src/lib.rs"

[dev-dependencies]
anyhow = "1"
arora = { path = "../crates/arora" }
arora-buffers = { path = "../crates/arora-buffers" }
arora-types = "1"
serde_yaml = "0.8"
uuid = "1"

[build-dependencies]
arora-cli = { path = "../crates/arora-cli", artifact = "bin" }
test-rust-component = { path = "../modules/test-rust-component", artifact = "cdylib", target = "wasm32-wasip2" }
