[package]
name = "arora-behavior-tree-types-yaml"
version = "0.1.0"
edition = "2021"
include = ["enumeration/**.yaml", "structure/**.yaml"]

[dev-dependencies]
arora-registry = { path = "../arora-registry" }
tokio = { version = "1", features = ["macros"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
arora-behavior-tree-types = { path = "../arora-behavior-tree-types" }
arora-registry = { path = "../arora-registry" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
uuid = "1"
