[package]
name = "arora-behavior-tree-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semio-record = { git = "https://github.com/semio-ai/semio-record.git", branch = "master" }
lazy_static = "*"
uuid = "0.8"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
