[package]
name = "arora-behavior-tree-types"
version = "0.1.0"
edition = "2021"
description = "Type records the Arora behavior tree declares (Status, TickId, folder)."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arora-types = { path = "../arora-types", version = "1.6" }
lazy_static = "1"
semver = "1"
uuid = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
