[package]
name = "arora-behavior-tree"
version = "5.0.1"
edition = "2021"
description = "The Arora behavior tree: Groot-compatible trees ticking Arora modules."
license = "MIT"

[lib]
path = "src/behavior_tree.rs"

[dependencies]
arora-buffers = { path = "../arora-buffers", version = "1" }
arora-behavior = { path = "../arora-behavior", version = "4" }
arora-types = { path = "../arora-types", version = "1.6" }
arora-behavior-tree-types = { path = "../arora-behavior-tree-types", version = "0.1" }
lazy_static = "1"
quick-xml = "0.40"
serde = { version = "1", features = ["derive"] }
# 0.9 switches the YAML enum representation from single-key maps to `!Tag`,
# which existing tree/module YAML files don't use. Stay on 0.8.
serde_yaml = "0.9"
uuid = { version = "1", features = ["serde", "v4"] }
derive_more = "2"

[dev-dependencies]
anyhow = "1"
# Only for tests: exercise a `{var}` cell resolved to a real store Slot. The
# library itself stays storage-agnostic (it depends only on the `Slot` trait).
arora-simple-data-store = { path = "../arora-simple-data-store" }

[build-dependencies]
anyhow = "1"
arora-behavior-tree-types = { path = "../arora-behavior-tree-types", version = "0.1" }
arora-registry = { path = "../arora-registry", version = "0.1" }
arora-module-rust = { path = "../arora-module-authoring/rust", version = "0.2" }
semver = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
