[package]
name = "arora-behavior"
version = "3.1.0"
edition = "2021"
description = "The Behavior abstraction the Arora runtime ticks: a behavior tree, a node graph, or any interpreter, against the shared data store — plus the shared behavior graph model."
license = "MIT"
readme = "readme.md"

[dependencies]
arora-types = { path = "../arora-types", version = "1.6" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
