[package]
name = "arora-behavior"
version = "6.0.0"
edition = "2021"
description = "The Behavior abstraction the Arora runtime ticks: a behavior tree, a node graph, or any interpreter, against the shared data store — plus the shared behavior graph model."
license = "MIT"
readme = "readme.md"

[dependencies]
arora-types = { path = "../arora-types", version = "2" }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde"] }
