[package]
name = "arora-bridge-ros2"
version = "3.0.0"
edition = "2021"
license = "MIT"
description = "ROS 2 bridge for Arora: exposes a device's keys over ROS 2 topics and accepts commands, as an arora_bridge::Bridge."
repository = "https://github.com/semio-ai/arora-sdk"

[lib]
name = "arora_bridge_ros2"

[dependencies]
arora-types = { path = "../arora-types", version = "2" }
arora-bridge = { path = "../arora-bridge", version = "4" }
async-trait = "0.1"
futures = "0.3"
log = "0.4"
# The semio-ai ros2-client fork, published as `ros2-client-multi-rmw` (upstream
# owns `ros2-client` on crates.io); the library is still imported as `ros2_client`.
# It carries both the DDS backend and a ROS 2-over-Zenoh backend (rmw_zenoh
# compatible), chosen by this crate's `dds` / `zenoh` features (see [features]);
# `jazzy` selects the ROS 2 distro wire format and is always on.
ros2-client = { package = "ros2-client-multi-rmw", version = "0.10", default-features = false, features = ["jazzy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
tokio-util = "0.7"

[features]
# Middleware backend selection, forwarded to ros2-client (which requires exactly
# one of `dds`/`zenoh`). DDS is the default; `zenoh` is rmw_zenoh-compatible.
# Build the Zenoh backend with `--no-default-features --features zenoh`.
# Consumers expose these as `ros2-dds` / `ros2-zenoh` with `ros2` = `ros2-dds`.
default = ["dds"]
dds = ["ros2-client/dds"]
zenoh = ["ros2-client/zenoh"]

[dev-dependencies]
rand = "0.9"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
