[package]
name = "arora-bridge"
version = "4.0.0"
edition = "2021"
description = "The Arora Bridge trait: the connection between an Arora runtime and a remote (e.g. Semio Studio), modelled on studio-bridge's device-client."
license = "MIT"
readme = "readme.md"
repository = "https://github.com/semio-ai/arora-engine"
homepage = "https://github.com/semio-ai/arora-engine"
documentation = "https://docs.rs/arora-bridge"
keywords = ["arora", "robotics", "bridge"]
categories = ["api-bindings"]

[dependencies]
arora-types = { path = "../arora-types", version = "2" }
async-trait = "0.1"
futures-channel = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt"] }
