[package]
name = "arora-buffers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [ "staticlib", "rlib" ]

[dependencies]
arora-schema = { path = "../arora-schema" }
bytes = "1"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"

[build-dependencies]
cbindgen = "0.20.0"

[dev-dependencies]
anyhow = "*"
serde_yaml = "0.8"
