[package]
name = "arora-buffers"
version = "2.0.0"
edition = "2021"
description = "Binary read/write buffers and type tags for the Arora module value ABI."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
arora-types = { path = "../arora-types", version = "2" }
bytes = "1"
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
cbindgen = "0.20"

[dev-dependencies]
anyhow = "1"
serde_yaml = "0.9"
