[package]
name = "arora-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arora-engine = { path = "../arora-engine" }
arora-buffers = { path = "../arora-buffers" }
arora-types = { path = "../arora-types", version = "1.4" }
arora-module-core = { path = "../arora-module-core" }
arora-registry = { path = "../arora-registry", features = ["remote"] }
semio-client = { git = "https://github.com/semio-ai/semio-client.git", branch = "main" }
semio-record = { git = "https://github.com/semio-ai/semio-record.git", branch = "main" }
anyhow = "*"
clap = { version = "3", features = ["derive"] }
futures = "0.3"
reqwest = "0.13"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
