[package]
name = "arora-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arora-engine = { path = "../arora-engine" }
arora-buffers = { path = "../arora-buffers" }
arora-types = { path = "../arora-types", version = "1.6" }
arora-module-core = { path = "../arora-module-authoring/core" }
arora-registry = { path = "../arora-registry" }
arora-registry-remote = { path = "../arora-registry-remote" }
semio-client = { git = "https://github.com/semio-ai/semio-client.git", branch = "main" }
anyhow = "*"
clap = { version = "3", features = ["derive"] }
futures = "0.3"
reqwest = "0.13"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
